--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is a portflio website of Y.S. Builders.
+YS Builders has established itself as a key player in Nepal's construction industry, delivering exceptional services for both government and private sector projects. We are well-positioned to meet the construction needs of the western and central regions of Nepal.
